--- a/style/screen.css
+++ b/style/screen.css
@@ -43,6 +43,7 @@ body, html{
     margin-right: 15px;
 }
 
+
 .header__navigation__item:last-of-type{
     margin-right: 0;
 }
@@ -86,9 +87,12 @@ body, html{
         margin-right: 70px;
     }
 
+
     .container{
-        width: 50%;
-        margin-bottom: 35px;
+        display: block;
+        width: 80%;
+        margin: 0 auto 35px auto;
+
     }
 
 
@@ -101,12 +105,14 @@ body, html{
         box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
     }
 
-    .container img{
+
+
+    .container__picture{
         display: block;
-        margin: 0 auto;
         width: 100%;
         height: 100%;
         overflow: hidden;
+        margin: 0 auto;
     }
 
     .cd-popup {
@@ -162,9 +168,13 @@ body, html{
         -moz-transition-duration: 0.3s;
         transition-duration: 0.3s;
     }
+}
 
+@media screen and (min-width: 1000px) {
+    .container{
+        display: block;
+        width: 60%;
+        margin: 0 auto 35px auto;
 
-
-
-
+    }
 }
