--- a/style/screen.css
+++ b/style/screen.css
@@ -58,6 +58,135 @@ body, html{
     color: #fc3d21;
 }
 
+.container{
+    display: block;
+    width: 100%;
+    margin: 0 auto 35px auto;
+    visibility: hidden;
+}
+
+.container.is-visible{
+    visibility: visible;
+}
+
+.video__container{
+    display: block;
+    max-width: 100%;
+    visibility: hidden;
+    margin: 0 auto;
+}
+
+iframe{
+    display: block;
+    margin: 0 auto;
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+}
+
+.video__container.is-visible{
+    visibility: visible;
+}
+
+.shadow-1 {
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+
+.shadow-1:hover {
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+
+#apod__img__id{
+    display: block;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    margin: 0 auto;
+}
+
+#apod__title__mainpage{
+    text-align: center;
+    font-size: 1.5rem;
+    margin-bottom: 20px;
+    color: #222222;
+}
+
+.cd-popup {
+    position: fixed;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(34,34,34,0.90);
+    opacity: 0;
+    visibility: hidden;
+    -webkit-transition: opacity 0.3s 0s, visibility 0s 0.3s;
+    -moz-transition: opacity 0.3s 0s, visibility 0s 0.3s;
+    transition: opacity 0.3s 0s, visibility 0s 0.3s;
+}
+
+.cd-popup.is-visible {
+    opacity: 1;
+    visibility: visible;
+    -webkit-transition: opacity 0.3s 0s, visibility 0s 0s;
+    -moz-transition: opacity 0.3s 0s, visibility 0s 0s;
+    transition: opacity 0.3s 0s, visibility 0s 0s;
+}
+
+.is-visible .cd-popup-container {
+    -webkit-transform: translateY(0);
+    -moz-transform: translateY(0);
+    -ms-transform: translateY(0);
+    -o-transform: translateY(0);
+    transform: translateY(0);
+}
+
+.cd-popup-container {
+    position: relative;
+    line-height: 23px;
+    max-width: 80%;
+    margin: 4em auto;
+    padding: 30px 30px 0 30px;
+    background: #FFF;
+    border-radius: .25em .25em .4em .4em;
+    text-align: center;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+    -webkit-transform: translateY(-40px);
+    -moz-transform: translateY(-40px);
+    -ms-transform: translateY(-40px);
+    -o-transform: translateY(-40px);
+    transform: translateY(-40px);
+    /* Force Hardware Acceleration in WebKit */
+    -webkit-backface-visibility: hidden;
+    -webkit-transition-property: -webkit-transform;
+    -moz-transition-property: -moz-transform;
+    transition-property: transform;
+    -webkit-transition-duration: 0.3s;
+    -moz-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+}
+
+#apod__title{
+    font-size: 1.5rem;
+    color: #0b3d91;
+    margin-bottom: 15px;
+}
+
+#apod__explaination{
+    margin-bottom: 20px;
+}
+.cd-popup-close{
+    width: calc(100% + 60px);
+    background-color: #fc3d21;
+    margin-left: -30px;
+    height: 33px;
+    border-radius: 0 0 .4em .4em;
+    text-decoration: none;
+    color: #fdfefe;
+    vertical-align: middle;
+}
+
 
 @media screen and (min-width: 400px){
     * {
@@ -92,64 +221,14 @@ body, html{
         display: block;
         width: 80%;
         margin: 0 auto 35px auto;
-
-    }
-
-
-    .shadow-1 {
-        box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-        transition: all 0.3s cubic-bezier(.25,.8,.25,1);
-    }
-
-    .shadow-1:hover {
-        box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-    }
-
-
-
-    .container__picture{
-        display: block;
-        width: 100%;
-        height: 100%;
-        overflow: hidden;
-        margin: 0 auto;
-    }
-
-    .cd-popup {
-        position: fixed;
-        left: 0;
-        top: 0;
-        height: 100%;
-        width: 100%;
-        background-color: rgba(34,34,34,0.90);
-        opacity: 0;
-        visibility: hidden;
-        -webkit-transition: opacity 0.3s 0s, visibility 0s 0.3s;
-        -moz-transition: opacity 0.3s 0s, visibility 0s 0.3s;
-        transition: opacity 0.3s 0s, visibility 0s 0.3s;
-    }
-
-    .cd-popup.is-visible {
-        opacity: 1;
-        visibility: visible;
-        -webkit-transition: opacity 0.3s 0s, visibility 0s 0s;
-        -moz-transition: opacity 0.3s 0s, visibility 0s 0s;
-        transition: opacity 0.3s 0s, visibility 0s 0s;
-    }
-
-    .is-visible .cd-popup-container {
-        -webkit-transform: translateY(0);
-        -moz-transform: translateY(0);
-        -ms-transform: translateY(0);
-        -o-transform: translateY(0);
-        transform: translateY(0);
     }
 
     .cd-popup-container {
         position: relative;
-        max-width: 50%;
+        line-height: 23px;
+        max-width: 80%;
         margin: 4em auto;
-        padding: 30px;
+        padding: 30px 30px 0 30px;
         background: #FFF;
         border-radius: .25em .25em .4em .4em;
         text-align: center;
@@ -168,6 +247,13 @@ body, html{
         -moz-transition-duration: 0.3s;
         transition-duration: 0.3s;
     }
+
+    .video__container{
+        display: block;
+        max-width: 80%;
+        visibility: hidden;
+        margin: 0 auto;
+    }
 }
 
 @media screen and (min-width: 1000px) {
@@ -175,6 +261,30 @@ body, html{
         display: block;
         width: 60%;
         margin: 0 auto 35px auto;
+    }
 
+    .cd-popup-container {
+        position: relative;
+        line-height: 23px;
+        max-width: 50%;
+        margin: 4em auto;
+        padding: 30px 30px 0 30px;
+        background: #FFF;
+        border-radius: .25em .25em .4em .4em;
+        text-align: center;
+        box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+        -webkit-transform: translateY(-40px);
+        -moz-transform: translateY(-40px);
+        -ms-transform: translateY(-40px);
+        -o-transform: translateY(-40px);
+        transform: translateY(-40px);
+        /* Force Hardware Acceleration in WebKit */
+        -webkit-backface-visibility: hidden;
+        -webkit-transition-property: -webkit-transform;
+        -moz-transition-property: -moz-transform;
+        transition-property: transform;
+        -webkit-transition-duration: 0.3s;
+        -moz-transition-duration: 0.3s;
+        transition-duration: 0.3s;
     }
 }
