--- a/style/screen.css
+++ b/style/screen.css
@@ -308,30 +308,48 @@ iframe{
     }
 
     #contact{
+        width: 100%;
+        background-color: #CC0000;
+    }
+
+    #contact .title{
+        padding-top: 20px;
+        color: #fdfefe;
+    }
+
+    .content{
         width: 70%;
         margin: 25px auto 40px;
+
+    }
+
+    .name,.email,.subject, .message{
+        display: inline-block;
+        padding-left: 15px;
+        padding-right: 15px;
     }
 
     .name,.email,.subject{
-        display: inline-block;
         width: 33%;
-        padding-left: 15px;
-        padding-right: 15px;
+    }
+
+    .message{
+        width: 100%;
+        padding-right: 0;
     }
 
     .subject{
         padding-right: 0;
     }
 
-    .name label,.email label,.subject label{
+    .name label,.email label,.subject label, .message label{
         display: block;
         margin-bottom: 10px;
         font-weight: 400;
-        color: #222222;
+        color: #fdfefe;
     }
-    .name input,.email input,.subject input{
+    .name input,.email input,.subject input, .message textarea{
         width: 100%;
-        height: 35px;
         background-color: #fcfcfc;
         padding: 0 20px;
         border: 1px solid #e1e1e1;
@@ -339,5 +357,16 @@ iframe{
         color: #8c9597;
         font-weight: 400;
         line-height: 25px;
+        margin-bottom: 20px;
+    }
+
+    .name input,.email input,.subject input{
+        height: 35px;
+    }
+
+    .message textarea{
+        height: 217px;
+        padding: 10px 20px;
+        margin-bottom: 20px;
     }
 }
