--- a/style/screen.css
+++ b/style/screen.css
@@ -112,8 +112,30 @@ iframe{
     margin: 0 auto;
 }
 
+.buttons{
+    margin: 0 auto 5px;
+    text-align: center;
+}
+
+.buttons button{
+    height: 44px;
+    margin: 10px 0;
+    padding: 0 60px;
+    border-radius: 5px;
+    border: none;
+    font-weight: 700;
+    color: #fdfefe;
+    background-color: #b22222;
+    display: inline-block;
+}
+
+#next{
+    margin-left: 10px;
+    display: none;
+}
+
 #apod__title__mainpage, .title{
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     color: #222222;
     text-align: center;
 }
@@ -124,6 +146,12 @@ iframe{
 
 #apod__title__mainpage{
     font-size: 1.3rem;
+}
+
+#apod__date{
+    font-size: 1.1rem;
+    text-align: center;
+    margin-bottom: 5px;
 }
 
 #main{
