--- a/style/screen.css
+++ b/style/screen.css
@@ -129,10 +129,75 @@ iframe{
     display: inline-block;
 }
 
+.buttons button:hover{
+    background-color: #0b3d91;
+    cursor: pointer;
+}
+
 #next{
     margin-left: 10px;
     display: none;
 }
+
+.nightmode{
+    margin: 0 15px;
+}
+
+#nightMode{
+    color: #222222;
+}
+.slideThree {
+    width: 80px;
+    height: 26px;
+    background: #333;
+    margin: 5px 0 10px 0;
+    position: relative;
+    border-radius: 50px;
+    box-shadow: inset 0px 1px 1px rgba(0,0,0,0.5), 0px 1px 0px rgba(255,255,255,0.2);
+}
+
+.slideThree:after {
+     content: 'OFF';
+     color: #000;
+     position: absolute;
+     right: 10px;
+     z-index: 0;
+     font: 12px/26px Arial, sans-serif;
+     font-weight: bold;
+     text-shadow: 1px 1px 0px rgba(255,255,255,.15);
+}
+.slideThree:before {
+     content: 'ON';
+     color: #fdfefe;
+     position: absolute;
+     left: 10px;
+     z-index: 0;
+     font: 12px/26px Arial, sans-serif;
+     font-weight: bold;
+ }
+.slideThree label {
+    display: block;
+    width: 34px;
+    height: 20px;
+    cursor: pointer;
+    position: absolute;
+    top: 3px;
+    left: 3px;
+    z-index: 1;
+    background: #fcfff4;
+    background: linear-gradient(top, #fcfff4 0%, #dfe5d7 40%, #b3bead 100%);
+    border-radius: 50px;
+    transition: all 0.4s ease;
+    box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.3);
+}
+.slideThree input[type=checkbox] {
+    visibility: hidden;
+}
+.slideThree input[type=checkbox]:checked + label {
+     left: 43px;
+}
+
+/* end .slideThree */
 
 #apod__title__mainpage, .title{
     margin-bottom: 10px;
@@ -152,6 +217,7 @@ iframe{
     font-size: 1.1rem;
     text-align: center;
     margin-bottom: 5px;
+    color: #222222;
 }
 
 #main{
